// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<CommentDate /> should render correctly 1`] = `
<span
  className="excerpt small"
>
   • 
  <Tooltip
    className="text-left"
    id="comment-createdAt-tooltip-comment"
    key="comment-createdAt-comment"
    label={
      <FormattedDate
        day="numeric"
        hour="numeric"
        minute="numeric"
        month="long"
        value={"2018-01-01T23:00:00.000Z"}
        year="numeric"
      />
    }
    placement="top"
    style={
      Object {
        "wordBreak": "break-word",
      }
    }
  >
    <span>
      il y a 7 ans
    </span>
  </Tooltip>
  <span>
     • 
    <FormattedMessage
      id="global.edited"
      values={Object {}}
    />
  </span>
</span>
`;

exports[`<CommentDate /> should render correctly with trashed false 1`] = `
<span
  className="excerpt small"
>
   • 
  <Tooltip
    className="text-left"
    id="comment-createdAt-tooltip-comment"
    key="comment-createdAt-comment"
    label={
      <FormattedDate
        day="numeric"
        hour="numeric"
        minute="numeric"
        month="long"
        value={"2018-01-01T23:00:00.000Z"}
        year="numeric"
      />
    }
    placement="top"
    style={
      Object {
        "wordBreak": "break-word",
      }
    }
  >
    <span>
      il y a 7 ans
    </span>
  </Tooltip>
  <span>
     • 
    <FormattedMessage
      id="global.edited"
      values={Object {}}
    />
  </span>
</span>
`;

exports[`<CommentDate /> should render null with createdAt > publishedAt 1`] = `
<span
  className="excerpt small"
>
   • 
  <Tooltip
    className="text-left"
    id="comment-createdAt-tooltip-comment"
    key="comment-createdAt-comment"
    label={
      <FormattedDate
        day="numeric"
        hour="numeric"
        minute="numeric"
        month="long"
        value={"2019-08-01T22:00:00.000Z"}
        year="numeric"
      />
    }
    placement="top"
    style={
      Object {
        "wordBreak": "break-word",
      }
    }
  >
    <span>
      il y a 6 ans
    </span>
  </Tooltip>
</span>
`;
